Fixed Tomcat config for JAVA_OPTS